Find and apply installer data